2008-07-01  Jerry DeLisle  <jvdelisle@gcc.gnu.org

	PR fortran/36676
	PR fortran/36657
	PR fortran/36546
	PR fortran/36538
	* gfortran.dg/namelist_50.f90
	* gfortran.dg/namelist_51.f90
	* gfortran.dg/namelist_48.f90
	* gfortran.dg/namelist_49.f90

2008-07-01  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/36648
	* g++.dg/vect/pr36648.cc: New testcase.

2008-06-30  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36662
	* g++.dg/ext/altivec-16.C: New test.

2008-06-29  Jakub Jelinek  <jakub@redhat.com>

	PR testsuite/36620
	* gcc.dg/pr36504.c: Add -w to dg-options.

2008-06-29  Ira Rosen  <irar@il.ibm.com>

	* gcc.dg/vect/pr36493.c: Require vect_long.

2008-06-28  Joseph Myers  <joseph@codesourcery.com>

	* gcc.c-torture/compile/20080628-1.c: New test.

2008-06-28  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36364
	* g++.dg/template/repo9.C: New test.

2008-06-26  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/inline-31.c, gcc.dg/inline-32.c, gcc.dg/inline-32a.c: New
	tests.

2008-06-26  Ira Rosen  <irar@il.ibm.com>

	* testsuite/lib/target-supports.exp
	(check_effective_target_vect_cmdline_needed): Add SPU to the list
	of targets that do not need command line argument to enable SIMD.

2008-06-26  Ira Rosen  <irar@il.ibm.com>

	PR target/36510
	* gcc.dg/vect/costmodel/ppc/costmodel-vect-31d.c: Change the loop
	bound.
	* gcc.dg/vect/costmodel/ppc/costmodel-vect-68d.c: Likewise.

2008-06-25  Richard Guenther  <rguenther@suse.de>

	* gcc.c-torture/compile/20080625-1.c: New testcase.

2008-06-25  Richard Guenther  <rguenther@suse.de>

	* g++.dg/torture/20080625-1.C: New testcase.

2008-06-24  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/warn5.adb: New test.

2008-06-24  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/36504
	* gcc.dg/pr36504.c: New test.

2008-06-23  Uros Bizjak  <ubizjak@gmail.com>

	PR middle-end/36584
	* testsuite/gcc.dg/pr36584.c: New test.
	* testsuite/gcc.target/i386/local2.c: Remove invalid test.
